# gomer

./: Gomer.pro  LICENSE  board.cpp  board.h  boardrect.cpp  boardrect.h  boardrectobject.cpp  boardrectobject.h  boardscene.cpp  boardscene.h  gamecontrol.cpp  gamecontrol.h  libertycountdisplay.cpp  libertycountdisplay.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stone.cpp  stone.h  stonegroup.cpp  stonegroup.h  stones.cpp  stones.h  territory.h  territorygroup.cpp  territorysquare.cpp  territorysquare.h
Engine/: CMakeLists.txt  bunkai.cpp  bunkai.h  chiho.cpp  chiho.h  chiiki.cpp  chiiki.h  config.h.in  console.cpp  console.h  dotei.cpp  dotei.h  draco.cpp  draco.h  game.cpp  game.h  goban.cpp  goban.h  goishi.cpp  goishi.h  gosu.cpp  gosu.h  gtphandler.cpp  gtphandler.h  jiyu.cpp  jiyu.h  kigo.cpp  kigo.h  kogai.cpp  kogai.h  main.cpp  menseki.cpp  menseki.h  player.cpp  player.h  ruikei.cpp  ruikei.h  ryoiki.cpp  ryoiki.h  sakudo.cpp  (+9 more)
archive/FirstCut/: board.cpp  boardrect.cpp  boardscene.cpp  boardscene.h  mainwindow.h  mainwindow.ui  stonegroup.cpp  stonegroup.h  stones.cpp  stones.h  territory.cpp  territorygroup.h
wiki/: GomerEngine  GomerFirstCut  GomerPhilosophy
wiki/Gomer/: Sakudo  Technology
